--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,30 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.container_body {
+  min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.63);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+Header {
+  min-height: 16vh;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+Main {
+  min-height: 76vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+Footer {
+  min-height: 5vh;
 }
 
-.card {
-  padding: 2em;
+::-webkit-scrollbar {
+  width: 7px;
 }
 
-.read-the-docs {
-  color: #888;
+::-webkit-scrollbar-track {
+  background-color: rgb(0, 0, 0);
+  border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #7100F1;
+  border-radius: 1rem;
 }
